Actualización de la web

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>PROVINCIAS UNIDAS</title>
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="images/perfil-transparente.png">
+  <link rel="icon" type="image/png" href="images/favicon2.png">
   
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
@@ -34,7 +34,7 @@
     <div class="hero section-box">
       <img src="images/Banner.jpg" alt="Banner de campaña" class="banner-header">
       <h1>Dra. Erika Gitto</h1>
-      <p>Candidata por el 3er Distrito a Senadora Provincial 2025</p>
+      <h3>Candidata a Senadora Provincial por el 2do Distrito 2025</h3>
     </div>
   </header>
 
@@ -46,8 +46,8 @@
         <img src="images/imagen-ery2.jpg" alt="Foto de perfil" class="foto-sobre-mi">
       </div>
       <p>
-        Soy Erika Vanesa Gitto, Abogada penalista, apasionada por el desarrollo de nuestra comunidad. 
-        Creo en una política transparente, cercana y con propuestas concretas para mejorar la vida de nuestros vecinos.
+        Soy Erika Gitto, abogada y candidata comprometida con el futuro de Mendoza.
+Mis propuestas están enfocadas en generar empleo joven con capacitación tecnológica, impulsar la sostenibilidad, reforzar la seguridad, fortalecer la educación pública y garantizar los derechos laborales y sociales de todos los mendocinos.
       </p>
     </section>
 
@@ -55,32 +55,37 @@
     <section id="propuestas">
       <h2>Mis Propuestas</h2>
       <ul>
-        <li><i class="fa-solid fa-lightbulb"></i> Impulsar programas de empleo joven y capacitación tecnológica.</li>
-        <li><i class="fa-solid fa-leaf"></i> Fomentar proyectos de sostenibilidad y espacios verdes.</li>
-        <li><i class="fa-solid fa-hospital"></i> Mejorar la infraestructura de salud local y atención primaria.</li>
-        <li><i class="fa-solid fa-book"></i> Invertir en la educación pública y apoyo escolar comunitario.</li>
-      </ul>
+  <li><i class="fa-solid fa-lightbulb"></i> Impulsar programas de empleo joven y capacitación tecnológica.</li>
+  <li><i class="fa-solid fa-leaf"></i> Fomentar proyectos de sostenibilidad y energías renovables.</li>
+  <li><i class="fa-solid fa-shield-halved"></i> Reforzar la prevención del delito y seguridad.</li>
+  <li><i class="fa-solid fa-book"></i> Fomentar la educación pública y apoyo escolar comunitario.</li>
+  <li><i class="fa-solid fa-scale-balanced"></i> Fortalecer los derechos laborales y protección social.</li>
+</ul>
+
     </section>
 
     <!-- Comentarios -->
     <section id="comentarios" class="comentarios">
       <h2>Dejá tu opinión</h2>
-      <p>Tu voz es importante. Dejanos tu comentario o propuesta:</p>
-      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfNvt5pD23zrTO30or8eSovVk2a46sbuec66qlSiArKg988Ig/viewform?usp=dialog">Cargando…</iframe>
+      <p>Tu opinión es importante:</p>
+      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScLx-aZ_QKeZafY5apOlEwGiqqax2_JfUGvIurIL0EIHirtFg/viewform?usp=sharing&ouid=105809516306880509368">Cargando…</iframe>
     </section>
 
     <!-- Contacto -->
     <section id="contacto">
       <h2>Contacto</h2>
       <p>Puedes escribirme a: 
-        <a href="mailto:erika.gittonline@gmail.com">erika.gittonline@gmail.com</a>
+        <a href="https://mail.google.com/mail/?view=cm&to=erikagitto2025@gmail.com" target="_blank">
+  erikagitto2025@gmail.com
+</a>
+
       </p>
       <p>Seguime en redes sociales:</p>
       <div class="social-icons">
-        <a href="https://facebook.com/" target="_blank" class="facebook"><i class="fa-brands fa-facebook-f"></i></a>
-        <a href="https://instagram.com/" target="_blank" class="instagram"><i class="fa-brands fa-instagram"></i></a>
-        <a href="https://x.com/" target="_blank" class="twitter"><i class="fa-brands fa-x-twitter"></i></a>
-        <a href="https://tiktok.com/" target="_blank" class="tiktok"><i class="fa-brands fa-tiktok"></i></a>
+        <a href="https://www.facebook.com/share/16KjeTqsQG/" target="_blank" class="facebook"><i class="fa-brands fa-facebook"></i></a>
+        <a href="https://www.instagram.com/erika.gitto/" target="_blank" class="instagram"><i class="fa-brands fa-instagram"></i></a>
+        <a href="https://x.com/GittoVanesa?t=gY5UMuma8HO-YMH_v_GR0A&s=09 " target="_blank" class="twitter"><i class="fa-brands fa-x-twitter"></i></a>
+        <a href="https://www.tiktok.com/@erika.gitto?_t=ZM-8zrooLzexVk&_r=1 " target="_blank" class="tiktok"><i class="fa-brands fa-tiktok"></i></a>
       </div>
     </section>
   </main>
@@ -91,10 +96,11 @@
     <h2>Provincias Unidas - Defendamos Mendoza - Lista 503</h2>
     <p>&copy; 2025 Desarrollado por Daniel Gitto para Erika Gitto </p>
     <div class="social">
-      <a href="https://facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-      <a href="https://instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-      <a href="https://x.com/" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
-      <a href="https://tiktok.com/" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
+      <a href="https://www.facebook.com/share/1EgHzcsA2u/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+      <a href="https://www.instagram.com/provinciasunidasmendoza" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+      <a href="https://x.com/ProvUnidasMza" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
+      <a href="https://www.provinciasunidasmendoza.com.ar/" target="_blank"><i class="fa-solid fa-globe"></i></a>
+
     </div>
   </footer>
 </body>
