2da Actualización de la web

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </div>
       <p>
         Soy Erika Gitto, abogada y candidata comprometida con el futuro de Mendoza.
-Mis propuestas están enfocadas en generar empleo joven con capacitación tecnológica, impulsar la sostenibilidad, reforzar la seguridad, fortalecer la educación pública y garantizar los derechos laborales y sociales de todos los mendocinos.
+Mis propuestas están enfocadas en generar empleo joven con capacitación tecnológica, impulsar la sustentabilidad, reforzar la seguridad, fortalecer la educación pública y garantizar los derechos laborales y sociales de todos los mendocinos.
       </p>
     </section>
 
@@ -56,7 +56,7 @@ Mis propuestas están enfocadas en generar empleo joven con capacitación tecnol
       <h2>Mis Propuestas</h2>
       <ul>
   <li><i class="fa-solid fa-lightbulb"></i> Impulsar programas de empleo joven y capacitación tecnológica.</li>
-  <li><i class="fa-solid fa-leaf"></i> Fomentar proyectos de sostenibilidad y energías renovables.</li>
+  <li><i class="fa-solid fa-leaf"></i> Fomentar proyectos de sustentabilidad y energías renovables.</li>
   <li><i class="fa-solid fa-shield-halved"></i> Reforzar la prevención del delito y seguridad.</li>
   <li><i class="fa-solid fa-book"></i> Fomentar la educación pública y apoyo escolar comunitario.</li>
   <li><i class="fa-solid fa-scale-balanced"></i> Fortalecer los derechos laborales y protección social.</li>
